feat: 상품 API 통일